--- a/HTML Text Formatting/index.html
+++ b/HTML Text Formatting/index.html
@@ -39,8 +39,11 @@
     <p>
       <ins>Inserted Text</ins>
     </p>
+    <p>
+      <sup>Superscript Text</sup> E=mc<sup>2</sup>
+    </p>
 
-    <p><sub>Subscript</sub> Normal text <sub>Superscript</sub></p>
+    <p><sub>Subscript</sub>  H<sub>2</sub>O</p>
     <blockquote cite="https://google.com">
       Quoted text from another website
     </blockquote>
