--- a/HTML Text Formatting/index.html
+++ b/HTML Text Formatting/index.html
@@ -52,7 +52,14 @@
             console.log(i)
         }
     </pre>
-
+    
+    <p>Abbreviations</p>
+    <p>
+      <abbr title="Hyper Text Markup Language">HTML</abbr>
+    </p>
+    <p>
+        This is <u></u>Underline Text</u>
+    </p>
     <address>
       My Coding School<br />
       123 ABC Street <br />
