--- a/HTML Text Formatting/index.html
+++ b/HTML Text Formatting/index.html
@@ -58,7 +58,7 @@
       <abbr title="Hyper Text Markup Language">HTML</abbr>
     </p>
     <p>
-        This is <u></u>Underline Text</u>
+        This is <u>Underline Text</u>
     </p>
     <address>
       My Coding School<br />
