--- a/HTML/Forms/index.html
+++ b/HTML/Forms/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Forms</h1>
     <form >
-        <!--Name-->
+        <!--Forms-->
        <div>
          <label for="Full Name">Full Name :</label>
         <input type="text" placeholder="Enter your name" >
