--- a/HTML/Table/index.html
+++ b/HTML/Table/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h1>Stuent Grades</h1>
+    <h1>Student Grades</h1>
     <!-- Table -->
     <table style="width: 100%">
       <!-- caption -->
